updated meta description

--- a/satellites.html
+++ b/satellites.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-15 Sun 22:36 -->
+<!-- 2023-10-16 Mon 09:28 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Hourly Satellite Imagery</title>
@@ -15,7 +15,7 @@
 <script src="/js/main.js"></script>
 <script src="/js/lib/copy-tex.js"></script>
 <link rel=“canonical” href=“https://reillyraab.com/satellites" />
-<meta name="description" content="A map of Earth and interactive astronomical clock" />
+<meta name="description" content="Hourly cloud cover data from geostationary satellites." />
 <script defer src="js/lib/astronomy.browser.js"></script>
 <script defer src="js/lib/gpu.js"></script>
 <script defer src="js/lib/curve-calc.js"></script>
