--- a/greyline.html
+++ b/greyline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-04 Wed 09:36 -->
+<!-- 2023-10-16 Mon 17:00 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Greyline Map</title>
@@ -28,8 +28,24 @@
 <main id="content" class="content">
 <header>
 <h1 class="title">Greyline Map</h1>
-</header><canvas id="canvas" style="position: fixed; top: 0; left: 0; width: 100%"></canvas>
+</header><p>
+This page shoes the relative position of the sun, moon, and planets, as
+calculated with <a href="https://github.com/cosinekitty/astronomy">Astronomy Engine</a>.
+</p>
+
+<ul class="org-ul">
+<li>Dragging right (left) advances (rewinds) time and rotates the planet.</li>
+<li>Dragging up (down) advances (rewinds) time by a day at a time.</li>
+</ul>
+
+<p>
+Background imagery is the NASA Blue Marble Next Generation, including
+Topography, Bathymetry, and City Lights.
+</p>
+
+<canvas id="canvas" style="position: fixed; top: 0; left: 0; width: 100%"></canvas>
 <samp id="date" style="position: fixed; top: 0; right: 0; background-color: transparent"></samp>
+<samp id="lrmsg" style="position: fixed; bottom: 0; right: 0; background-color: #1a1a1a;"></samp>
 <img id="month01" style="display: none;" width="100%"/>
 <img id="month02" style="display: none;" width="100%"/>
 <img id="month03" style="display: none;" width="100%"/>
