--- a/satellites.html
+++ b/satellites.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-16 Mon 09:30 -->
+<!-- 2023-10-16 Mon 16:52 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Hourly Satellite Imagery</title>
@@ -46,6 +46,7 @@ and Moon positions are calculated with <a href="https://github.com/cosinekitty/a
 <code id="loading" style="font-size: 50%;"></code>
 <canvas id="canvas" style="position: fixed; top: 0; left: 0; width: 100%; display: none;"></canvas>
 <samp id="date" style="position: fixed; top: 0; right: 0; background-color: transparent"></samp>
+<samp id="lrmsg" style="position: fixed; bottom: 0; right: 0; background-color: transparent"></samp>
 <img id="month01" style="display: none;"/>
 <img id="month02" style="display: none;"/>
 <img id="month03" style="display: none;"/>
