--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-13 Fri 14:41 -->
+<!-- 2023-11-16 Thu 09:57 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -46,7 +46,7 @@ table {
   <div>
 
 
-<figure id="orga79d430">
+<figure id="org052a6d7">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -125,12 +125,40 @@ This document is also available as a <a href="./files/cv.pdf">PDF</a>.
 <h2 id="Summary">Summary</h2>
 <div class="outline-text-2" id="text-org88a5df2">
 <p>
-My current research involves the dynamics of multiagent systems and the
-alignment of local incentives with global objectives. My background is in
-physics, with experience in scientific computing, signal processing, and
-electronics. I spent a few years between undergrad and grad school backpacking
-abroad, remotely developing software related to automated circuit design.
+My current research in machine learning involves the dynamics of multiagent
+systems and the alignment of local incentives with global objectives. My
+background is in physics, with experience in scientific computing, signal
+processing for quantum systems, and electronics. I spent a few years between
+undergrad and grad school backpacking abroad, remotely developing software
+related to automated circuit design.
 </p>
+</div>
+</div>
+<div id="outline-container-Research-Interests" class="outline-2">
+<h2 id="Research-Interests">Research Interests</h2>
+<div class="outline-text-2" id="text-orgb1b16d2">
+<ul class="org-ul">
+<li>I strongly suspect that the next generation of &ldquo;Artificial Intelligence&rdquo; will
+not be focused on single models, but on multiagent systems understood in terms
+of interacting units of control. Ideas around
+<a href="https://en.wikipedia.org/wiki/Predictive_coding">predictive coding</a> and
+<a href="https://en.wikipedia.org/wiki/Free_energy_principle#Active_inference">&ldquo;active inference&rdquo;</a>
+give off some of this flavor, but don&rsquo;t emphasize recursive organization.
+If you know of any active research programs with this flavor, I would love to
+hear from you (and you should feel welcome to email me).</li>
+
+<li>I occasionally become absorbed by attempts to prove that
+<a href="https://en.wikipedia.org/wiki/P_versus_NP_problem"><!--P \subsetneq NP-->
+<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>P</mi><mo>⊊</mo><mi>N</mi><mi>P</mi></mrow><annotation encoding="application/x-tex">P \subsetneq NP</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8193em;vertical-align:-0.136em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel amsrm">⊊</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">NP</span></span></span></span></a>
+implies or is implied by the
+<a href="https://en.wikipedia.org/wiki/Fluctuation_theorem">fluctuation theorem</a>. So
+far, it&rsquo;s been a reliably humbling experience.</li>
+
+<li>I&rsquo;d like to better understand
+<a href="https://en.wikipedia.org/wiki/Quantum_decoherence">quantum decoherence</a>.
+I never really outgrew a sophomoric concern with the
+<a href="https://en.wikipedia.org/wiki/Measurement_problem">Measurement Problem</a>.</li>
+</ul>
 </div>
 </div>
 <div id="outline-container-Education" class="outline-2">
@@ -202,31 +230,38 @@ abroad, remotely developing software related to automated circuit design.
 </colgroup>
 <tbody>
 <tr>
-<td class="org-left">Convex Optimization</td>
-<td class="org-left">Classical Mechanics</td>
-<td class="org-left">Dynamical Systems</td>
-<td class="org-left">GNU/Linux</td>
-</tr>
-
-<tr>
-<td class="org-left">Information Theory</td>
-<td class="org-left">JavaScript</td>
-<td class="org-left">Linear Algebra</td>
 <td class="org-left">Machine Learning</td>
+<td class="org-left">Game Theory</td>
+<td class="org-left">Parallel Algorithms</td>
+<td class="org-left">Dynamical Systems</td>
 </tr>
 
 <tr>
-<td class="org-left">Python</td>
-<td class="org-left">Quantum Computing</td>
-<td class="org-left">Signal Processing</td>
-<td class="org-left">Scientific Visualization</td>
-</tr>
-
-<tr>
-<td class="org-left">Statistical Mechanics</td>
+<td class="org-left">Nonlinear Optimization</td>
 <td class="org-left">Stochastic Calculus</td>
+<td class="org-left">Python</td>
+<td class="org-left">Differentiable Programming</td>
+</tr>
+
+<tr>
+<td class="org-left">Convex Optimization</td>
 <td class="org-left">Variational Calculus</td>
-<td class="org-left">Vector Calculus</td>
+<td class="org-left">JavaScript</td>
+<td class="org-left">Classical Mechanics</td>
+</tr>
+
+<tr>
+<td class="org-left">Scientific Visualization</td>
+<td class="org-left">Information Theory</td>
+<td class="org-left">C</td>
+<td class="org-left">Statistical Mechanics</td>
+</tr>
+
+<tr>
+<td class="org-left">Signal Processing</td>
+<td class="org-left">Linear Algebra</td>
+<td class="org-left">GNU/Linux</td>
+<td class="org-left">Quantum Mechanics</td>
 </tr>
 </tbody>
 </table>
@@ -477,7 +512,7 @@ abroad, remotely developing software related to automated circuit design.
 <div class="outline-text-2" id="text-orgc98ed4e">
 <p>
 (7) <a href="https://arxiv.org/abs/2304.09362">Long-Term Fairness with Unknown Dynamics</a> <br>
-Tongxin Yin, <strong>Reilly Raab</strong>, Mingyan Liu, and Yang Liu <br>
+Tongxin Yin<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, <strong>Reilly Raab</strong><sup><a id="fnr.1.100" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, Mingyan Liu, and Yang Liu <br>
 <em>ICLR RTML (2023) &#x2013; <strong>Best Paper Runner-Up</strong>, <strong>Highlighted Paper Award</strong></em> <br>
 <em>NeurIPS. (2023)</em>
 </p>
@@ -485,7 +520,7 @@ Tongxin Yin, <strong>Reilly Raab</strong>, Mingyan Liu, and Yang Liu <br>
 <p>
 (6) Fair Participation via Sequential Policies <br>
 <strong>Reilly Raab</strong>, Ross Boczar, Maryam Fazel, and Yang Liu <br>
-<em>arXiv. (To appear)</em>
+<em>Submitted to AAAI. (Under Review)</em>
 </p>
 
 <p>
@@ -496,7 +531,7 @@ Tongxin Yin, <strong>Reilly Raab</strong>, Mingyan Liu, and Yang Liu <br>
 
 <p>
 (4) <a href="https://openreview.net/pdf?id=U3gobB4oKv">Fairness Transferability Subject to Bounded Distribution Shift</a> <br>
-Yatong Chen<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, <strong>Reilly Raab</strong><sup><a id="fnr.1.100" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, Jialu Wang, and Yang Liu <br>
+Yatong Chen<sup><a id="fnr.1.100" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, <strong>Reilly Raab</strong><sup><a id="fnr.1.100" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, Jialu Wang, and Yang Liu <br>
 <em>NeurIPS. (2022)</em>
 </p>
 
@@ -513,7 +548,7 @@ Yatong Chen<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">[
 </p>
 
 <p>
-(1) <a href="https://pubs.rsc.org/en/content/articlehtml/2014/mh/c3mh00089c">Systematic study of exciton diffusion length in organic semiconductors by six experimental methods</a> <br>
+(1) <a href="https://pubs.rsc.org/en/content/articlehtml/2014/mh/c3mh00089c">Systematic Study of Exciton Diffusion Length in Organic Semiconductors by Six Experimental Methods</a> <br>
 Jason D. A. Lin <strong>et. al.</strong> <br>
 <em>Materials Horizons. (2014)</em>
 </p>
