--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-16 Mon 21:12 -->
+<!-- 2023-12-29 Fri 12:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -29,7 +29,7 @@
 <div class="outline-text-2" id="text-orgd977941">
 <p>
 <a href="./site-info.html">Technical Site Info</a> <br>
-<a href="./about.html">Curriculum Vitae</a> <br>
+<a href="./about.html">About Me</a> <br>
 <a href="./reading-list.html">Digital Bookshelf</a> <br>
 <a href="./demo.html">HTML Demo &amp; Reference</a>
 </p>
